# comfyui-ultralytics-yolo

./: README.md  __init__.py  install.bat  pyproject.toml
nodes/: detect.py
